test/bad/modules/use02.px

use math only sin

print pi
